<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#414342"
    tools:context=".ResetPassword">

    <TextView
        android:id="@+id/resetBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="125dp"
        android:text="@string/signUp_Back"
        android:textColor="#6FC1CC"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/resetPassButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resetPassButton"
        app:layout_constraintTop_toTopOf="@+id/resetPassButton" />

    <Button
        android:id="@+id/resetPassButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="#6fc1cc"
        android:text="@string/reset_Button"
        android:textColor="#414342"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/resetPassRepEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/resetPassRepEmail"
        app:layout_constraintTop_toTopOf="@+id/resetPassRepEmail" />

    <EditText
        android:id="@+id/resetPassRepEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="emailAddress, email"
        android:ems="10"
        android:hint="@string/email_Repeat"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/resetPassEmail"
        app:layout_constraintStart_toStartOf="@+id/resetPassEmail"
        app:layout_constraintTop_toTopOf="@+id/resetPassEmail"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/resetPassEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="81dp"
        android:autofillHints="emailAddress, email"
        android:ems="10"
        android:hint="@string/signIn_Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/titleResetPass"
        app:layout_constraintStart_toStartOf="@+id/titleResetPass"
        app:layout_constraintTop_toTopOf="@+id/titleResetPass"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/titleResetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:text="@string/reset_Title"
        android:textColor="#6FC1CC"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="@+id/senatoLogoResetPass"
        app:layout_constraintStart_toStartOf="@+id/senatoLogoResetPass"
        app:layout_constraintTop_toTopOf="@+id/senatoLogoResetPass" />

    <ImageView
        android:id="@+id/senatoLogoResetPass"
        android:layout_width="84dp"
        android:layout_height="98dp"
        android:layout_marginStart="163dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="164dp"
        android:contentDescription="@string/mainLogo_Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/senatologo" />
</androidx.constraintlayout.widget.ConstraintLayout>